# WindTerm

./: BUILD_GUIDE.md  BUILD_README.md  CMakeLists.txt  INTEGRATION_QUICK.md  Info.plist.in  QUICKSTART.md  WINDOWS_BUILD_SETUP.md  build.sh  build_windows.bat  check_terminal.py  test_csi2026_simulation.py  validate_terminal.py
.github/workflows/: README.md  build.yml  test.yml
src/Pty/: PtyTerminalBridge.cpp  PtyTerminalBridge.h  PtyWithCSI2026.cpp  PtyWithCSI2026.h
src/Terminal/: CMakeLists.txt  CSIParser.cpp  CSIParser.h  INTEGRATION.md  README.md  SynchronizedBuffer.cpp  SynchronizedBuffer.h  TerminalHandler.cpp  TerminalHandler.h  TerminalMode.cpp  TerminalMode.h  example_csi2026.cpp  terminal.pri  test_csi2026.cpp
